define a flow to ingest news with images